# torchchess

./: AUTHORS  CMakeLists.txt  README.md  alpha_beta.cpp  evaluator.cpp  nnue.hpp  torchchess.cpp  transformer.hpp  uci.cpp  wrapper.cpp  wrapper.hpp
.github/ci/: .gitkeep
scripts/: README.md  check_build.sh  download_networks.sh
src/: .depend  Makefile  benchmark.cpp  benchmark.h  bitboard.cpp  bitboard.h  engine.cpp  engine.h  evaluate.cpp  evaluate.h  history.h  main.cpp  memory.cpp  memory.h  misc.cpp  misc.h  movegen.cpp  movegen.h  movepick.cpp  movepick.h  numa.h  perft.h  polybook.cpp  polybook.h  position.cpp  position.h  score.cpp  score.h  search.cpp  search.h  thread.cpp  thread.h  thread_win32_osx.h  timeman.cpp  timeman.h  tt.cpp  tt.h  tune.cpp  tune.h  types.h  (+4 more)
src/incbin/: README.md
src/nnue/: README.md  network.cpp  network.h  nnue_accumulator.cpp  nnue_accumulator.h  nnue_architecture.h  nnue_common.h  nnue_feature_transformer.h  nnue_misc.cpp  nnue_misc.h  simd.h
src/nnue/features/: half_ka_v2_hm.cpp  half_ka_v2_hm.h
src/nnue/layers/: affine_transform.h  affine_transform_sparse_input.h  clipped_relu.h  sqr_clipped_relu.h
src/syzygy/: tbprobe.cpp  tbprobe.h
tests/: README.md  instrumented.py  testing.py
